functional email update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
         <div class="gmail">
-            <a href="mcauthor002@gmail.com" target="_blank">mcauthor002@gmail.com</a>
+            <a href="mailto:mcauthor002@gmail.com">mcauthor002@gmail.com</a>
         </div>
 
         <div class="portf">
@@ -44,7 +44,7 @@
                 <h1> I am <span> Jimbe Innocent</span></h1>
                 <h2> Senior Associate, KPNG</h2>
 
-                <button class="download">Download CV <i class="fa-solid fa-download"></i></button>
+                <a href="./Jimbe.pdf" download class="download">Download CV <i class="fa-solid fa-download"></i></a>
             </div>
 
             <div class="bgtext">
