--- a/pages/Porfolio.html
+++ b/pages/Porfolio.html
@@ -74,7 +74,7 @@
 
             <div class="contact">
                 <i class="fa-brands fa-square-facebook"></i>
-                <a href="" class="mediatxt">Jimbe Innocent</a>
+                <a href="https://www.facebook.com/jimbe.innocent" class="mediatxt">Jimbe Innocent</a>
             </div>
 
             <div class="contact">
