kpmg spelling correction

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="bgtext">
                 <h1>Hi,</h1>
                 <h1> I am <span> Jimbe Innocent</span></h1>
-                <h2> Senior Associate, KPNG</h2>
+                <h2> Senior Associate, KPMG</h2>
 
                 <a href="./Jimbe.pdf" download class="download">Download CV <i class="fa-solid fa-download"></i></a>
             </div>
@@ -59,7 +59,7 @@
                     <h1>Based in Netherlands</h1>
                     <div class="fontinline">
                         <h1>i'm an auditor,</h1>
-                        <h1>currently with KPNG</h1>
+                        <h1>currently with KPMG</h1>
                     </div>
                 </div>
 
